fix: simplify Page usage
Use map() where it's possible to simplify the code